fix(products):changes to text color and bullet points alignment

--- a/css/style.css
+++ b/css/style.css
@@ -4902,8 +4902,12 @@ h1{
     padding:0 !important;  
   }
 
-.distributor-img img{
-    width: 60%;
+  .distributor-img img{
+      width: 60%;
+  }
+  
+  .media .modem-type .button-outline{
+    font-size:0.9rem !important;
   }
 
 }
@@ -4991,6 +4995,7 @@ photon-wifi:49*, *:after, *:before {
 .col1 img, .col1 a{
   float: left;
   margin-left: 15px;
+  width:300px;
 }
 
 .vcard{
@@ -5507,6 +5512,7 @@ h2.modem-sub-heading{
 
 .category-content h1{
   text-transform: none;
+  font-size: 3rem;
 }
 
 .category-content h3{
@@ -5525,6 +5531,11 @@ h2.modem-sub-heading{
   background-color: transparent;
   color:#222222;
   border: 2px solid #E6782F;
+  margin-bottom: 0.5rem;
+}
+
+.media .modem-type p{
+  margin-bottom: 0.5rem
 }
 
 .media .icon{
@@ -5534,3 +5545,10 @@ h2.modem-sub-heading{
   padding: 1em;
 }
 
+p, ul li{
+  color:#777;
+}
+
+ul{
+  margin-left:1.3rem;
+}
